--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -18,7 +18,7 @@
 <body class="register">
 
 <div class="register-form fl-center h-screen txt_color_white">
-    <div class="register-form__inner">
+    <div class="register-form__inner w100">
 
         <div class="register-form__heading boil-content">
             <h1 class="ta-center heading-2"><%= title; %></h1>
