--- a/views/register/type/sign-up.ejs
+++ b/views/register/type/sign-up.ejs
@@ -26,7 +26,7 @@
             <input id="confirm-password" type="password" name="confirmPassword" placeholder="Confirm" required>
         </div>
 
-        <!-- checkbox -->
+        <!-- consent -->
         <div class="field -checkbox-radio">
             <input id="consent" type="checkbox" name="consent" required>
             <label for="consent">I agree to the Privacy policy!</label>
