style(register): style

--- a/views/register/type/forget-password.ejs
+++ b/views/register/type/forget-password.ejs
@@ -1,13 +1,15 @@
 <form method="post" action="?type=<%= type; %>&method=post">
 
-    <!-- email -->
-    <div>
-        <label for="email">Email:</label>
-        <input id="email" type="email" name="email" placeholder="Email" required>
-    </div>
+    <div class="form-fields">
+        <!-- email -->
+        <div class="field">
+            <label for="email">Email:</label>
+            <input id="email" type="email" name="email" placeholder="Email" required>
+        </div>
 
-    <!-- Submit -->
-    <div>
-        <button type="submit">Send</button>
+        <!-- Submit -->
+        <div class="field">
+            <button type="submit" class="btn_primary w100">Send</button>
+        </div>
     </div>
 </form>
