--- a/views/register/index.ejs
+++ b/views/register/index.ejs
@@ -30,7 +30,7 @@
 
         <!-- render message-->
         <% if(message) { %>
-            <h1><%= message; %></h1>
+            <div class="txt_14px txt_color_error" style="margin-top:1rem"><%= message; %></div>
         <% } %>
     </div>
 </div>
