--- a/core/assets/styles/base/base.scss
+++ b/core/assets/styles/base/base.scss
@@ -77,6 +77,7 @@ body {
   text-decoration: none;
   font-weight: 600;
   color: var(--btn-color);
+  line-height: 1.2;
 
   // hover
   &:hover,
@@ -145,7 +146,28 @@ body {
   }
 }
 
-/**/
-.hidden {
-  display: none;
+/* badge */
+.badge {
+  font-size: 1rem;
+  font-weight: 600;
+  text-transform: capitalize;
+
+  padding: .4rem;
+  min-width: 5.5rem;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  // error
+  &--red {
+    background: var(--color-error);
+    color: #fff;
+  }
+
+  // green
+  &--green {
+    background: var(--color-success);
+    color: #fff;
+  }
 }
