--- a/core/assets/styles/components/custom-table.scss
+++ b/core/assets/styles/components/custom-table.scss
@@ -44,10 +44,13 @@
   /* column */
   [data-custom-table] [data-column-wrapper="item"] [data-column] {
     font-size: var(--fz-14);
+    display: flex;
+    align-items: center;
+    gap: .6rem;
   }
   [data-custom-table] [data-column-wrapper="item"] [data-column]:not(:last-child),
   [data-custom-table] [data-column-wrapper="item"] [data-column] [data-title]:not(:last-child) {
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
   }
 
   /* title with data attribute */
@@ -63,11 +66,11 @@
 
   /* item */
   [data-custom-table] [data-column-wrapper="item"] {
-    padding: 2rem;
+    padding: 1.5rem;
     border-radius: 3px;
     border: 1px solid var(--color-secondary);
   }
   [data-custom-table] [data-column-wrapper="item"]:not(:last-child) {
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
   }
 }
