style(base): style

--- a/core/assets/styles/utils/responsive.scss
+++ b/core/assets/styles/utils/responsive.scss
@@ -11,7 +11,7 @@ $breakpoints: (
   display: block;
 }
 
-.show-mobile, .show-tablet-v, .show-tablet-h, .show-touch-devices {
+.show-mobile, .show-tablet-v, .show-tablet-h, .show-touch-devices, .hidden {
   display: none;
 }
 
