--- a/core/assets/styles/utils/variables.scss
+++ b/core/assets/styles/utils/variables.scss
@@ -4,6 +4,7 @@
   --color-white: #f0f0f1;
   --color-gray: rgba(210, 210, 210, 0);
   --color-error: #f03e3e;
+  --color-success: #37b24d;
 
   --text-color: #212529;
   --bg-color: #f8f9fa;
